tests/NormalTests/paczka1/small_fuzzy/32579435.err
Error in line 10: wH5Yxz A225 44,4
Error in line 6: lATrApljX S5 73,6
